--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#80AF81</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorAccent">#FF4081</color>
 </resources>
