--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,10 +10,8 @@
         android:id="@+id/ed_register_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autofillHints=""
         android:hint="@string/hint_name"
         android:layout_marginBottom="16dp"
-        android:inputType=""
         android:padding="12dp"
         android:background="@drawable/edit_text_background" />
 
@@ -21,20 +19,16 @@
         android:id="@+id/ed_register_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autofillHints=""
         android:hint="@string/email_hint"
         android:layout_below="@id/ed_register_name"
         android:layout_marginBottom="16dp"
-        android:inputType=""
         android:padding="12dp"
-        android:background="@drawable/edit_text_background"
-        tools:ignore="TextFields" />
+        android:background="@drawable/edit_text_background" />
 
     <EditText
         android:id="@+id/ed_register_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autofillHints=""
         android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:layout_below="@id/ed_register_email"
@@ -50,5 +44,12 @@
         android:backgroundTint="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:layout_below="@id/ed_register_password" />
+
+    <include
+        android:id="@+id/loading_layout"
+        layout="@layout/loading_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
 </RelativeLayout>
