--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
-    <corners android:radius="8dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/colorPrimary" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/abu_abu"/>
+            <corners android:radius="10dp"/>
+            <stroke android:width="1dp" android:color="@android:color/darker_gray"/>
+        </shape>
+    </item>
+</selector>
