--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#80AF81</color>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="whiteBG">#F9F7F7</color>
+    <color name="blue">#3F72AF</color>
+    <color name="abu_abu">#DBE2EF</color>
+    <color name="abu_hint">#8785A2</color>
+<!--    <color name="colorPrimary">#2196F3</color>-->
+<!--    <color name="colorAccent">#FF4081</color>-->
 </resources>
