--- a/app/src/main/res/drawable/ic_dicoding_foreground.xml
+++ b/app/src/main/res/drawable/ic_dicoding_foreground.xml
@@ -3,8 +3,7 @@
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="512"
-    android:viewportHeight="512"
-    tools:ignore="UnusedResources">
+    android:viewportHeight="512">
   <group android:scaleX="1.09"
       android:scaleY="1.09"
       android:translateX="-23.04"
