--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/whiteBG"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:ignore="Overdraw">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/topAppBar"
@@ -42,6 +43,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
         tools:ignore="MissingConstraints">
 
         <ImageView
@@ -61,6 +63,8 @@
             android:autofillHints=""
             android:hint="@string/description"
             android:inputType="textMultiLine"
+            android:textColorHint="@color/abu_hint"
+            android:textColor="@color/black"
             android:alpha="0"
             android:minLines="3"
             android:maxLines="5"
