--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/image_kurikulum_global"
+        app:srcCompat="@drawable/image_global"
         tools:ignore="ContentDescription" />
 
     <TextView
@@ -93,7 +93,6 @@
         android:padding="12dp"
         android:alpha="0"
         android:drawableEnd="@drawable/ic_visibility_off"
-        android:onClick="togglePasswordVisibility"
         app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
         tools:alpha="100"
         tools:ignore="Autofill" />
