--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,6 +10,6 @@
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/logo_dicoding"
-        android:contentDescription="@string/logo_dicoding"/>
+        android:src="@drawable/ic_logo"
+        android:contentDescription="@string/ic_logo"/>
 </RelativeLayout>
