--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,24 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Base.Theme.AplikasiStoryApp" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/whiteBG</item>
         <item name="android:statusBarColor">@color/blue</item>
     </style>
 
     <style name="Theme.AplikasiStoryApp" parent="Base.Theme.AplikasiStoryApp" />
+
+    <style name="Theme.AplikasiStoryApp.AppWidgetContainerParent" parent="@android:style/Theme.DeviceDefault" tools:ignore="UnusedResources">
+        <!-- Radius of the outer bound of widgets to make the rounded corners -->
+        <item name="appWidgetRadius">16dp</item>
+        <!--
+        Radius of the inner view's bound of widgets to make the rounded corners.
+        It needs to be 8dp or less than the value of appWidgetRadius
+        -->
+        <item name="appWidgetInnerRadius">8dp</item>
+    </style>
+
+    <style name="Theme.AplikasiStoryApp.AppWidgetContainer" parent="Theme.AplikasiStoryApp.AppWidgetContainerParent" tools:ignore="UnusedResources">
+        <!-- Apply padding to avoid the content of the widget colliding with the rounded corners -->
+        <item name="appWidgetPadding">16dp</item>
+    </style>
 </resources>
