Memperbaiki setting dan logout

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,6 +52,7 @@
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="12dp"
         android:hint="@string/email_hint"
+        android:textColor="@color/black"
         android:textColorHint="@color/abu_hint"
         android:inputType="textEmailAddress"
         android:padding="12dp"
@@ -72,6 +73,7 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
         android:hint="@string/password_hint"
+        android:textColor="@color/black"
         android:textColorHint="@color/abu_hint"
         android:inputType="textPassword"
         android:padding="12dp"
