--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -50,6 +50,7 @@
         android:textColorHint="@color/abu_hint"
         android:inputType=""
         android:padding="12dp"
+        android:textColor="@color/black"
         android:alpha="0"
         android:layout_marginStart="15dp"
         android:layout_marginTop="16dp"
@@ -68,6 +69,7 @@
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="12dp"
         android:hint="@string/email_hint"
+        android:textColor="@color/black"
         android:textColorHint="@color/abu_hint"
         android:inputType="textEmailAddress"
         android:padding="12dp"
@@ -88,6 +90,7 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="12dp"
         android:hint="@string/password_hint"
+        android:textColor="@color/black"
         android:textColorHint="@color/abu_hint"
         android:inputType="textPassword"
         android:padding="12dp"
