--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -58,7 +58,7 @@
         tools:alpha="100"
         app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
 
-    <EditText
+    <com.example.aplikasistoryapp.ui.activity.CustomEditText
         android:id="@+id/ed_register_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -71,15 +71,13 @@
         android:hint="@string/email_hint"
         android:textColor="@color/black"
         android:textColorHint="@color/abu_hint"
-        android:inputType="textEmailAddress"
         android:padding="12dp"
         android:alpha="0"
         app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
-        tools:layout_editor_absoluteX="16dp"
         tools:alpha="100"
         tools:ignore="Autofill" />
 
-    <EditText
+    <com.example.aplikasistoryapp.ui.activity.CustomEditText
         android:id="@+id/ed_register_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
