--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -84,6 +84,19 @@
                     android:maxLines="5"
                     tools:alpha="100" />
 
+                <CheckBox
+                    android:id="@+id/checkbox_add_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_location"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="15dp"
+                    android:padding="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/button_add"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
             </LinearLayout>
 
             <LinearLayout
