--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:menuCategory="alternative">
 
-<!--        <item-->
-<!--            android:id="@+id/action_favorite"-->
-<!--            android:icon="@drawable/ic_favorite"-->
-<!--            android:title="@string/settings"-->
-<!--            app:showAsAction="ifRoom" />-->
+        <item
+            android:id="@+id/action_maps"
+            android:icon="@drawable/ic_maps"
+            android:title="@string/settings"
+            app:showAsAction="ifRoom" />
 
         <item
             android:id="@+id/action_settings"
