Membuat UI Test login dan logout

--- a/app/src/main/res/layout/custom_marker.xml
+++ b/app/src/main/res/layout/custom_marker.xml
@@ -3,37 +3,39 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp"
-    android:background="@drawable/custom_marker_background">
+    android:background="@drawable/custom_marker_background"
+    android:layout_margin="5dp"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/iv_item_photo"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:contentDescription="@string/image"
-        android:scaleType="centerCrop"
-        android:layout_gravity="center_horizontal"/>
+        android:scaleType="centerCrop" />
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/photo_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:paddingTop="5dp"
-        android:textColor="@android:color/black"/>
+        android:textSize="16sp"
+        android:paddingBottom="3dp"
+        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/tv_item_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="2dp"
-        android:textColor="@android:color/darker_gray"/>
+        android:textSize="14sp"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
