--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="android:statusBarColor">@color/blue</item>
     </style>
 
-    <style name="Base.Theme.MyGoogleMaps" parent="Theme.Material3.DayNight"/>
+    <style name="Base.Theme.MyGoogleMaps" parent="Theme.Material3.DayNight" tools:ignore="UnusedResources" />
 
     <style name="Theme.AplikasiStoryApp" parent="Base.Theme.AplikasiStoryApp" />
 
