--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,7 +4,7 @@
     android:id="@+id/mapContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MapsActivity">
+    tools:context=".ui.activity.MapsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
