--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -55,6 +55,7 @@
         android:id="@+id/languageArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:layout_marginStart="220dp"
         android:contentDescription="@string/description"
         android:src="@drawable/ic_arrow"
