--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@color/whiteBG"
-    tools:context=".ui.SplashScreen">
+    tools:context=".ui.activity.SplashScreen">
 
     <ImageView
         android:layout_width="200dp"
