--- a/app/src/main/res/layout/custom_marker.xml
+++ b/app/src/main/res/layout/custom_marker.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="16sp"
+        android:textColor="@color/black"
         android:paddingBottom="3dp"
         android:layout_gravity="center_horizontal" />
 
@@ -36,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
+        android:textColor="@color/black"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
